# FastApiCourse

./: .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  main.py  makefile  pyproject.toml  schemas.py
.github/workflows/: aws.yml  pylint.yml
database/: db_article.py  db_user.py  engine.py  hash.py  models.py
routers/: article.py  user.py
routers/blog/: get.py  post.py
